Format files with Prettier

--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -7,14 +7,14 @@
 
 .secret {
   margin-right: 12px;
-  background-color: #6C757D;
+  background-color: #6c757d;
   border: 1px solid #596067;
 }
 
 .player {
   margin-left: 12px;
-  background-color: #FFF3CD;
-  border: 1px solid #D2C8A9;
+  background-color: #fff3cd;
+  border: 1px solid #d2c8a9;
 }
 
 .secret img {
